# nolgia-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml  revendor-spec.yml
.sisyphus/notepads/auth-and-platform/: learnings.md
crates/cli/: Cargo.toml
crates/cli/skills/nolgia-platform/: SKILL.md
crates/cli/skills/nolgia-ugc-ads/: SKILL.md
crates/cli/skills/nolgia-video-prompting/: SKILL.md
crates/cli/src/: auth.rs  main.rs  output.rs  update_check.rs
crates/cli/src/commands/: ability.rs  account.rs  assets.rs  billing.rs  characters.rs  gen.rs  mod.rs  models.rs  pat.rs  projects.rs  skill.rs  skills.rs  status.rs  wait.rs
crates/cli/tests/: cli_commands.rs  e2e_cli.rs
crates/client/: Cargo.toml  README.md  build.rs  openapi-version.toml  openapi.yaml
crates/client/src/: lib.rs
crates/client/tests/: client_smoke.rs
npm/: README.md  package.json
npm/scripts/: postinstall.js
src/: main.rs
