[workspace]
members = ["crates/client", "crates/cli"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
nolgia-client = { path = "crates/client" }
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
strip = "symbols"
